[metadata]
name = pydevtool
version = 0.1.0
author = Eduardo Naufel Schettino
author_email = schettino72@gmail.com
description = 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pydoit/pydevtool
project_urls =
    Bug Tracker = https://github.com/pydoit/pydevtool/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = pydevtool
python_requires = >=3.8
