[metadata]
name = pydevtool
version = 0.2.0
author = Eduardo Naufel Schettino
author_email = schettino72@gmail.com
description = CLI dev tools powered by pydoit
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pydoit/pydevtool
project_urls =
    Documentation =  https://pydoit.org
    Source = https://github.com/pydoit/pydevtool
    Bug Tracker = https://github.com/pydoit/pydevtool/issues
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = pydevtool
python_requires = >=3.8

install_requires = doit
