[metadata]
name = pydevtool
version = 0.2.0
author = Eduardo Naufel Schettino
author_email = schettino72@gmail.com
description = CLI dev tools powered by pydoit
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pydoit/pydevtool
project_urls =
    Documentation =  https://pydoit.org
    Source = https://github.com/pydoit/pydevtool
    Bug Tracker = https://github.com/pydoit/pydevtool/issues
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = pydevtool
python_requires = >=3.8

install_requires = doit >= 0.36.0


[pycodestyle]

# E266 too many leading '#' for block comment
# E301 expected 1 blank line
# E302: expected 2 blank lines
# E303: too many blank lines
# E305: expected 2 blank lines after class or function definition
# E306: expected 1 blank line before a nested definition
# E731: do not assign lambda
# W503: line break before binary operator
ignore = E266, E301, E302, E303, E305, E306, E731, W503
max-line-length = 90
